<resources>
    <string name="app_name">TON Air Gap Client</string>
    <string name="scan_qr">Scan transaction</string>
    <string name="unknown_error">Unknown error</string>
    <string name="back_to_start">Back to start</string>
    <string name="deployment">Deployment for address:</string>
    <string name="send">Send</string>
    <string name="address_decode_error">Error decoding address</string>
    <string name="sending_error">Transaction didn\'t reach liteserver, or was rejected by it</string>
    <string name="sending">Sending…</string>
    <string name="prevalidating">Pre-validating…</string>
    <string name="transfer">Transfer</string>
    <string name="to_address">To address</string>
    <string name="ton_amount">%1$s  TON %2$s</string>
    <string name="transaction_success">Transaction accepted by liteserver</string>
    <string name="need_permission_text">The camera permission is necessary to scan QR code</string>
    <string name="liteclient_error">Error connecting to TON liteservers</string>
    <string name="transaction_decoding_error">Couldn\'t decode transaction</string>
    <string name="qr_scanner_error">Qr scanner error</string>
    <string name="validation">Validation…</string>
    <string name="validation_timeout">Transaction failed validation, probably not enough funds or invalid transaction</string>
    <string name="send_anyway">Send anyway</string>
    <string name="invalid_transaction">Transaction won\'t pass validation</string>
    <string name="account_init_error">This account is already initialized.</string>
    <string name="account_uninit_error">This account is not initialized.</string>
    <string name="zero_balance">This account don\'t have any funds for fee.</string>
    <string name="seqno_differs">Transaction seqno differs from wallet\'s seqno.</string>
    <string name="low_balance">Wallet\'s balance is less than transfer amount.</string>
    <string name="prevalidation_error">Couldn\'t pre-validate transaction. It may not pass validation</string>
    <string name="comment">Comment</string>
    <string name="compare_clipboard">Compare address with clipboard</string>
    <string name="compare_success">Addresses match!</string>
    <string name="compare_difference">Addresses are different! Clipboard has:\ </string>
    <string name="compare_fail">Addresses differ!</string>
    <string name="empty_clipboard">Clipboard has no text</string>
    <string name="title_activity_accounts_list">AccountsListActivity</string>
    <string name="watch_wallets">Watch wallets</string>
    <string name="update_balance">Update balance</string>
    <string name="add_account">Add account</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="paste">Paste address</string>
    <string name="wrong_address">Address is invalid</string>
    <string name="identicon">Identification icon</string>
    <string name="tick">Tick</string>
    <string name="empty_list_placeholder">Scan deployment transaction, or manually add an address with + button</string>
    <string name="up_arrow">Upward arrow</string>
    <string name="down_arrow">Downward arrow</string>
    <string name="sent">Sent</string>
    <string name="to">TO:</string>
    <string name="fee">Fee:</string>
    <string name="received">Received</string>
    <string name="from">From:</string>
    <string name="deployment_rocket">Deployment rocket</string>
    <string name="just_deployment">Deployment</string>
    <string name="question_mark">Question mark</string>
    <string name="unknown">Unknown purpose</string>
    <string name="no_transactions">No transactions registered, swipe down to update</string>
    <string name="pos_value">+%1$s</string>
    <string name="neg_value">-%1$s</string>
    <string name="address_copied">Address copied</string>
    <string name="clipboard_trash">Clipboard doesn\'t have a valid address</string>
    <string name="clipboard">Clipboard:</string>
    <string name="transaction">Transaction:</string>
    <string name="estimated_fee">Estimated fee:</string>
    <string name="estimate_fee_fail">Couldn\'t estimate fee</string>
    <string name="estimation">Estimating…</string>
    <string name="lower_than_fee">Not enough funds to cover estimated fee. Transaction is very unlikely to pass validation</string>
    <string name="existing_address">Address is already in watchlist</string>
    <string name="postpone_deployment">Postpone deployment</string>
    <string name="postpone_popup">When app is open, it would automatically send deployment, when account has enough funds. Don\'t delete this address from the watchlist</string>
    <string name="ok">Ok</string>
    <string name="seqno">Seqno:</string>
</resources>