<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SendTransactionActivity">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back_to_start"
        android:scaleType="fitXY"
        android:src="@drawable/left_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/deployment"
            android:textColor="@color/gray"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/deployment_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center"
            android:text="@string/address_decode_error"
            android:textColor="@color/gray"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/estimated_fee"
            android:textColor="@color/gray"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/fee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/estimation"
            android:textColor="@color/gray"
            android:textSize="24dp" />

        <Button
            android:id="@+id/send_transaction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/blue_border"
            android:fontFamily="@font/roboto"
            android:paddingLeft="30dp"
            android:paddingTop="4dp"
            android:paddingRight="30dp"
            android:paddingBottom="7dp"
            android:text="@string/send"
            android:textColor="@color/blue"
            android:textSize="32dp" />

        <Button
            android:id="@+id/postpone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:fontFamily="@font/roboto"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/postpone_deployment"
            android:textColor="@color/blue"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/sending"
            android:textColor="@color/gray"
            android:textSize="27dp"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>