<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SendTransactionActivity">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back_to_start"
        android:scaleType="fitXY"
        android:src="@drawable/left_arrow" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/back_arrow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/transfer"
                android:textColor="@color/gray"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/transfer_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="10000.000000 TON ($70000.001)"
                android:textColor="@color/gray"
                android:textSize="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/to_address"
                android:textColor="@color/gray"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/transfer_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto_mono"
                android:gravity="center"
                android:text="EQAzfFTh74RPe1ulNzRyWQTUqcMEtMsEhwUGIGT9G9v6GbDX"
                android:textColor="@color/gray"
                android:textIsSelectable="true"
                android:textSize="24dp" />

            <Button
                android:id="@+id/compare_clipboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/compare_clipboard"
                android:textColor="@color/blue"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/comment_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/comment"
                android:textColor="@color/gray"
                android:textSize="23dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/comment_content_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:maxLines="3"
                android:text="012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789"
                android:textColor="@color/gray"
                android:textSize="22dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/estimated_fee"
                android:textColor="@color/gray"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/fee_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/estimation"
                android:textColor="@color/gray"
                android:textSize="24dp" />

            <Button
                android:id="@+id/send_transaction_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/blue_border"
                android:fontFamily="@font/roboto"
                android:paddingLeft="30dp"
                android:paddingTop="4dp"
                android:paddingRight="30dp"
                android:paddingBottom="7dp"
                android:text="@string/send"
                android:textColor="@color/blue"
                android:textSize="32dp" />

            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/sending"
                android:textColor="@color/gray"
                android:textSize="27dp"
                android:visibility="invisible" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/upper_snack_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="180" />
</RelativeLayout>